tests/NormalTests/paczka1/fuzzy1/18824157.err
Error in line 33: k85Xr A966 27,1
Error in line 22: TL3GzXkGm S11 85,4
Error in line 34: k85Xr S950 77,7
